# toolbox_sdk

./: .gitignore  README.md  pyproject.toml
examples/: ndvi_mapcalc_combi.py  run_generalization.py  run_kmldae2footprints.py  run_lines2poly.py  run_qgis2pdf.py  run_qgis_intersect.py  run_r_mapcalc_chained.py
src/toolbox_sdk/: __init__.py  client.py  types.py
tests/integration/: test_hello.py  test_r_mapcalc.py
tests/integration/data/: band4.tif  band5.tif
tests/unittests/: conftest.py  test_client.py  test_download.py  test_integration.py  test_task_and_exception.py  test_types.py
